--- a/Description
+++ b/Description
@@ -1,1 +1,3 @@
 
+1.Деклариране на класа:
+Програмата започва с дефиниция на публичния клас DepositCalculator. Това е основният клас, който съдържа логиката за изчисляване на крайната сума по депозит.
