--- a/Description
+++ b/Description
@@ -1,3 +1,5 @@
 
 1.Деклариране на класа:
 Програмата започва с дефиниция на публичния клас DepositCalculator. Това е основният клас, който съдържа логиката за изчисляване на крайната сума по депозит.
+2.Основният метод main:
+Основният метод main е точката за стартиране на програмата. В него се извършва цялата обработка на входните данни и изчисленията.
