--- a/Description
+++ b/Description
@@ -4,3 +4,4 @@
 2.Основният метод main:
 Основният метод main е точката за стартиране на програмата. В него се извършва цялата обработка на входните данни и изчисленията.
 3.Създаване на обект от класа Scanner:
+Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
