--- a/Description
+++ b/Description
@@ -1,7 +1,8 @@
 
 1.Деклариране на класа:
-Програмата започва с дефиниция на публичния клас DepositCalculator. Това е основният клас, който съдържа логиката за изчисляване на крайната сума по депозит.
+  Програмата започва с дефиниция на публичния клас DepositCalculator. Това е основният клас, който съдържа логиката за изчисляване на крайната сума по депозит.
 2.Основният метод main:
-Основният метод main е точката за стартиране на програмата. В него се извършва цялата обработка на входните данни и изчисленията.
+  Основният метод main е точката за стартиране на програмата. В него се извършва цялата обработка на входните данни и изчисленията.
 3.Създаване на обект от класа Scanner:
-Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
+  Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
+  Този обект позволява лесно въвеждане на стойности от потребителя, като числа и текст.
