--- a/Description
+++ b/Description
@@ -6,3 +6,5 @@
 3.Създаване на обект от класа Scanner:
   Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
   Този обект позволява лесно въвеждане на стойности от потребителя, като числа и текст.
+4.Въвеждане на стойности:
+
