--- a/Description
+++ b/Description
@@ -7,4 +7,12 @@
   Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
   Този обект позволява лесно въвеждане на стойности от потребителя, като числа и текст.
 4.Въвеждане на стойности:
-
+Програмата очаква потребителят да въведе три стойности:
+Размер на депозита (depositedAmount): Десетично число (с плаваща запетая), което представлява началната сума по депозита.
+Период на депозита в месеци (depositPeriodMonths): Цяло число, което представлява времето, през което ще се начисляват лихви върху депозита.
+Годишен лихвен процент (annualInterestRate): Десетично число, което представлява годишния лихвен процент, начисляван върху депозираната сума.
+5.Изчисляване на лихвата:
+  Лихвата се изчислява като месечна стойност на база на годишния лихвен процент.
+  Формулата за месечната лихва е:
+  лихва =депозитна сума×годишен лихвен процент/100*12
+​  Това означава, че се разделя годишната лихва на 12, за да се намери месечната.
