--- a/Description
+++ b/Description
@@ -16,3 +16,8 @@
   Формулата за месечната лихва е:
   лихва =депозитна сума×годишен лихвен процент/100*12
 ​  Това означава, че се разделя годишната лихва на 12, за да се намери месечната.
+6.Изчисляване на крайната сума:
+
+Крайната сума се изчислява като:
+обща сума=депозитна сума+период в месеци×месечна лихва
+Тук се добавя лихвата към първоначалната сума за целия период.
