--- a/Description
+++ b/Description
@@ -21,3 +21,7 @@
 Крайната сума се изчислява като:
 обща сума=депозитна сума+период в месеци×месечна лихва
 Тук се добавя лихвата към първоначалната сума за целия период.
+7.Извеждане на резултата:
+
+Резултатът се отпечатва на конзолата с точност до два знака след десетичната запетая.
+Използва се методът printf за форматирано отпечатване на общата сума.
