--- a/Description
+++ b/Description
@@ -7,10 +7,10 @@
   Обектът Scanner се създава, за да може програмата да чете входни данни от потребителя (от конзолата).
   Този обект позволява лесно въвеждане на стойности от потребителя, като числа и текст.
 4.Въвеждане на стойности:
-Програмата очаква потребителят да въведе три стойности:
-Размер на депозита (depositedAmount): Десетично число (с плаваща запетая), което представлява началната сума по депозита.
-Период на депозита в месеци (depositPeriodMonths): Цяло число, което представлява времето, през което ще се начисляват лихви върху депозита.
-Годишен лихвен процент (annualInterestRate): Десетично число, което представлява годишния лихвен процент, начисляван върху депозираната сума.
+  Програмата очаква потребителят да въведе три стойности:
+  Размер на депозита (depositedAmount): Десетично число (с плаваща запетая), което представлява началната сума по депозита.
+  Период на депозита в месеци (depositPeriodMonths): Цяло число, което представлява времето, през което ще се начисляват лихви върху депозита.
+  Годишен лихвен процент (annualInterestRate): Десетично число, което представлява годишния лихвен процент, начисляван върху депозираната сума.
 5.Изчисляване на лихвата:
   Лихвата се изчислява като месечна стойност на база на годишния лихвен процент.
   Формулата за месечната лихва е:
@@ -18,10 +18,13 @@
 ​  Това означава, че се разделя годишната лихва на 12, за да се намери месечната.
 6.Изчисляване на крайната сума:
 
-Крайната сума се изчислява като:
-обща сума=депозитна сума+период в месеци×месечна лихва
-Тук се добавя лихвата към първоначалната сума за целия период.
+  Крайната сума се изчислява като:
+  обща сума=депозитна сума+период в месеци×месечна лихва
+  Тук се добавя лихвата към първоначалната сума за целия период.
 7.Извеждане на резултата:
 
-Резултатът се отпечатва на конзолата с точност до два знака след десетичната запетая.
-Използва се методът printf за форматирано отпечатване на общата сума.
+  Резултатът се отпечатва на конзолата с точност до два знака след десетичната запетая.
+  Използва се методът printf за форматирано отпечатване на общата сума.
+8.Затваряне на обекта Scanner:
+
+  След като вече не се изисква въвеждане на допълнителни данни, обектът Scanner се затваря с метода close(), за да се освободи ресурсът, свързан с него.
